# ocr-recognition

./: .gitignore  CHANGE  CMakeLists.txt  README.md  ocr-devinfo-setup.qbs  ocr-devinfo.qbs  setenv.qbs
config/: XXX整机设备组成编号装入关系表--.xlsx  XXX整机设备组成编号装入关系表.xlsx  logging.conf  main.json  template.docx
include/jencrypt/: global.h  jbiosinfo.h  jcpuid.h  jdes.h  jdiskserial.h  jmacaddress.h  jmd5.h
include/jwt/: JLangManager.h  JLogManager.h  JNotify.h  JStorableProxy.h  global.h
include/log4cpp/: Export.hh  config-win32.h
include/protocore/: config.h  global.h
include/protowidget/: JChannelPane.h  JChartView.h  JFileChartView.h  JGroupChannelPane.h  JNotify.h  JNotifyDialog.h  JProgressDialog.h  JProtoTreeView.h  JSearchEdit.h  JWorkerLabel.h  global.h
include/qwt/: qwt_global.h  qwt_scale_draw.h
lib/: jwt.lib  jwt64.lib  jwt64d.lib  jwtd.lib  log4cpp.lib  log4cpp64.lib  log4cpp64d.lib  log4cppd.lib  protocore64.lib  protocore64d.lib  protowidget64.lib  protowidget64d.lib  qwt.lib  qwt64.lib  qwt64d.lib  qwtd.lib
lib/x64/: jwt.lib  jwtd.lib  log4cpp.lib  log4cppd.lib  qwt.lib  qwtd.lib
setup/: setup.qbs
setup/config/: config.qbs  config.xml
src/: CMakeLists.txt  SettingsDialog.cpp  SettingsDialog.h  SplashWidget.cpp  global.cpp  global.h  main.cpp  src.qbs
src/app/: CMakeLists.txt  main.cpp
src/common/: ExcelMgr.cpp  ExcelMgr.h  Logging.cpp  Logging.h  OCRMgr.cpp  OCRMgr.h
src/core/: CMakeLists.txt
src/mainview/: AboutDialog.cpp  AboutDialog.h  CentralWidget.cpp  CentralWidget.h  MainSettingsDlg.cpp  MainStatusBar.cpp  (+3 more)
tools/: tools.qbs
(+198 files in other folders)
